<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Signup">

    <EditText
        android:id="@+id/rgrepass"
        android:layout_width="231dp"
        android:layout_height="61dp"
        android:autofillHints="abc@gmail.com"
        android:ems="10"
        android:hint="Re-Enter Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="@dimen/_91sdp"
        android:layout_height="52dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/re_enter_password2"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656"
        tools:ignore="id" />

    <TextView
        android:id="@+id/logbutton"
        android:layout_width="@dimen/_189sdp"
        android:layout_height="@dimen/_25sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="@dimen/_14sdp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        app:layout_constraintVertical_bias="0.944" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilerg0"
        android:layout_width="118dp"
        android:layout_height="88dp"
        android:src="@drawable/photocamera"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/_189sdp"
        android:layout_height="@dimen/_80sdp"
        android:fontFamily="@font/spartan_bold"
        android:gravity="center"
        android:text="@string/sign_up2"
        android:textColor="@color/black"
        android:textSize="@dimen/_35sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="@dimen/_91sdp"
        android:layout_height="52dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/email2"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="@dimen/_91sdp"
        android:layout_height="52dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/password2"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <EditText
        android:id="@+id/rgpass"
        android:layout_width="228dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/enter_password2"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544"
        android:autofillHints="" />

    <Button
        android:id="@+id/rgSignup"
        android:layout_width="@dimen/_91sdp"
        android:layout_height="52dp"
        android:text="@string/sign_up3"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <EditText
        android:id="@+id/rgemail"
        android:layout_width="228dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/enter_email2"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439"
        android:autofillHints="abc@gmail.com" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="@dimen/_91sdp"
        android:layout_height="52dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:text="@string/username"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />

    <EditText
        android:id="@+id/rgusername"
        android:layout_width="228dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336"
        android:autofillHints="abc@gmail.com" />


</androidx.constraintlayout.widget.ConstraintLayout>